# agenticflow

./: .env.example  .env.production  .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  LICENSE  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_READY.md  PROJECT_OVERVIEW.md  PYDANTIC_AI_AGENTIC_COMPLETION.md  README.md  RELEASE_SUMMARY.md  V1_RELEASE_CERTIFICATE.md  V1_RELEASE_STATUS.md  cleanup.sh  demo.py  demo_v1.py  docker-compose.yml  main.py  main_clean.py  pyproject.toml  release_check.sh  setup.sh  start.sh  start_agentic.py
.github/: copilot-instructions.yml
config/: __init__.py  mcp_config.py  mcp_servers.yaml  settings.py
models/: chunks.py  mcp_models.py  memory.py  pydantic_ai_models.py
services/: bedrock_chat.py  bedrock_embedding.py  bedrock_registry.py  chunking.py  mcp_client.py  memory.py  pydantic_ai_agent.py  workflow_orchestrator.py
storage/: vector_store.py
tests/: conftest.py  test_chunking.py  test_integration.py  test_mcp_client.py  test_memory.py  test_vector_store.py
utils/: logging_config.py
